package clases_a_utilizar_de_datos;

public class TipoNormal extends Individuo{

    public TipoNormal(int id, int generacion, int vidas, int reproduccion, int clonacion) {
        super(id, generacion, vidas, reproduccion, clonacion);
    }
    @Override
    public void movimiento(Individuo individuo) {

    }
}
