package clases_a_utilizar_de_datos;

public class TipoAvanzado extends Individuo{
    public TipoAvanzado(int id, int generacion, int vidas, int reproduccion, int clonacion) {
        super(id, generacion, vidas, reproduccion, clonacion);
    }
    public TipoAvanzado() {}
}
