@startuml
'https://plantuml.com/class-diagram


class Celda {
- ListaSimple<Integer> coordenadas
- ListaDoblementeEnlazada<Individuo> listaIndividuos
- ListaDoblementeEnlazada<Entorno> listaEntornos
- int filas
- int columnas
- int V
+ Celda()
+ Celda(int filas, int columnas)
+ getFila(): int
+ getColumna(): int
+ setFilas(int filas): void
+ setColumnas(int columnas): void
+ getV(): int
+ setV(int V): void
+ getListaIndividuos(): ListaDoblementeEnlazada<Individuo>
+ getListaEntornos(): ListaDoblementeEnlazada<Entorno>
+ addIndividuo(Individuo individuo)):void
+ addEntorno(Entorno entorno)):void
+ getCoordenadas(): ListaSimple<Integer>
+ setCoordenadas(ListaSimple<Integer> coordenadas): void
+ setListaIndividuos(ListaDoblementeEnlazada<Individuo> listaIndividuos): void
+ setListaEntornos(ListaDoblementeEnlazada<Entorno> listaEntornos)): void
+ setDataGuardada(CeldaProperties modelCelda): void
+ toString(): String
}

class Individuo {
- int id
- int generacion
- int vidas
- int reproduccion
- int clonacion
+ Individuo()
+ Individuo(int id, int generacion, int vidas, int reproduccion, int clonacion)
+ getId():int
+ setId(int id):void
+ getGeneracion():int
+ setGeneracion(int generacion):void
+ getVidas():int
+ setVidas(int vidas):void
+ getReproduccion():int
+ setReproduccion(int reproduccion):void
+ getClonacion():int
+ setClonacion(int clonacion):void
+ getMuerte(int reproduccion):int
+ toString(Individuo individuo): String
}

class TipoBasico {
+ TipoBasico()
+ TipoBasico(int id, int generacion, int vidas, int reproduccion, int clonacion)
}

class TipoNormal {
+ TipoNormal()
+ TipoNormal(int id, int generacion, int vidas, int reproduccion, int clonacion)
}

class TipoAvanzado {
+ TipoAvanzado()
+ TipoAvanzado(int id, int generacion, int vidas, int reproduccion, int clonacion)
}

class Entorno {
- int tiempo_aparicion
- int probabilidad
+ Entorno()
+ Entorno(int tiempo_aparicion, int probabilidad)
+ getTiempo_aparicion():int
+ setTiempo_aparicion(int tiempo_aparicion):void
+ getProbabilidad():int
+ setProbabilidad(int tiempo_aparicion)):void
+ toString(Entorno entorno): String
}

class Agua {
+ Agua()
+ Agua(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}

class Comida {
+ Comida()
+ Comida(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}

class Montaña {
+ Montaña()
+ Montaña(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}

class Tesoro {
+ Tesoro()
+ Tesoro(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}

class Biblioteca {
+ Biblioteca()
+ Biblioteca(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}

class Pozo {
+ Pozo()
+ Pozo(int tiempo_aparicion, int probabilidad)
+ modificarIndividuo(Individuo individuo):void
}


Celda o-- Individuo
Celda o-- Entorno
Individuo <|-- TipoBasico
Individuo <|-- TipoNormal
Individuo <|-- TipoAvanzado
Entorno <|-- Agua
Entorno <|-- Comida
Entorno <|-- Montaña
Entorno <|-- Tesoro
Entorno <|-- Biblioteca
Entorno <|-- Pozo



@enduml